# shimmer

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
shimmer/: Cargo.toml
shimmer/src/: bus.rs  cdrom.rs  cpu.rs  dma.rs  gpu.rs  lib.rs  scheduler.rs  sio0.rs  timers.rs
shimmer/src/cdrom/: command.rs  control.rs  interrupt.rs
shimmer/src/cpu/: arith_logic.rs  coproc.rs  exception.rs  gte.rs  jump_branch.rs  load_store.rs
shimmer/src/gpu/: display.rs  interface.rs  rendering.rs
shimmer/src/gpu/interface/: primitive.rs
shimmer_cli/: Cargo.toml
shimmer_cli/src/: lib.rs  main.rs
shimmer_core/: Cargo.toml
shimmer_core/proptest-regressions/cpu/interpreter/: arith_logic.txt  coproc.txt  jump_branch.txt  load_store.txt
shimmer_core/src/: cdrom.rs  cpu.rs  dma.rs  exe.rs  gpu.rs  gte.rs  interrupts.rs  kernel.rs  lib.rs  mem.rs  scheduler.rs  sio.rs  sio0.rs  timers.rs  util.rs
shimmer_core/src/cdrom/: interpreter.rs
shimmer_core/src/cdrom/interpreter/: command.rs  control.rs  interrupt.rs
shimmer_core/src/cpu/: cop0.rs  instr.rs  interpreter.rs
shimmer_core/src/cpu/interpreter/: arith_logic.rs  coproc.rs  exception.rs  jump_branch.rs  load_store.rs
shimmer_core/src/dma/: executor.rs
shimmer_core/src/gpu/: cmd.rs  instr.rs  interface.rs  interpreter.rs  renderer.rs  software.rs  texture.rs
shimmer_core/src/gpu/cmd/: display.rs  environment.rs  rendering.rs
shimmer_core/src/gpu/commands/: display.rs  environment.rs
shimmer_core/src/gpu/instr/: display.rs  environment.rs  rendering.rs
shimmer_core/src/gpu/interface/: primitive.rs
shimmer_core/src/gpu/interpreter/: display.rs  rendering.rs
shimmer_core/src/gte/: fixed.rs  instr.rs
shimmer_core/src/mem/: io.rs  primitive.rs
shimmer_core/src/sio/: interpreter.rs
shimmer_core/src/sio0/: interpreter.rs
shimmer_egui/: Cargo.toml
shimmer_egui/src/: breakpoints.rs  cli.rs  colors.rs  emulation.rs  instruction_viewer.rs  log_viewer.rs  main.rs  memory_viewer.rs  screen.rs  system_control.rs  tab.rs  tty.rs  util.rs
shimmer_egui/src/tab/: breakpoints.rs  instruction_viewer.rs  log_viewer.rs  memory_viewer.rs  screen.rs  system_control.rs  tty.rs
shimmer_gui/: Cargo.toml
shimmer_gui/src/: emulation.rs  input.rs  main.rs  util.rs  windows.rs
shimmer_gui/src/windows/: control.rs  display.rs  instructions.rs  logs.rs  registers.rs  serial.rs
shimmer_wgpu/: Cargo.toml  build.rs
shimmer_wgpu/shaders/: display.wgsl  flat.wgsl  render_texture.wgsl  triangle.wgsl
shimmer_wgpu/shaders/src/: color.wgsl  commands.wgsl  consts.wgsl  display.wgsl  primitives.wgsl  rasterizer.wgsl  rectangle.wgsl  texture.wgsl  transfer.wgsl  triangle.wgsl  utils.wgsl  vram.wgsl
shimmer_wgpu/shaders/src/primitives/: rectangle.wgsl  triangle.wgsl
shimmer_wgpu/src/: context.rs  display.rs  lib.rs  rasterizer.rs  rectangle.rs  texture.rs  transfers.rs  triangle.rs  util.rs  vram.rs
shimmer_wgpu/src/context/: texture.rs
shimmer_wgpu/src/rasterizer/: data.rs  dirty.rs
shimmer_wgpu_compute/: Cargo.toml
shimmer_wgpu_compute/shaders/src/: color.wgsl  commands.wgsl  consts.wgsl  display.wgsl  primitives.wgsl  rasterizer.wgsl  render.wgsl  shading.wgsl  texture.wgsl  transfer.wgsl  vram.wgsl
shimmer_wgpu_compute/shaders/src/primitives/: rectangle.wgsl  triangle.wgsl
shimmer_wgpu_compute/src/: context.rs  display.rs  lib.rs  rasterizer.rs  transfers.rs  util.rs  vram.rs
