[package]
name = "shimmer_core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dev-dependencies]
proptest = "1.6"
proptest-derive = "0.5"
bitos = { workspace = true, features = ["proptest"] }

[dependencies]
bitos.workspace = true
bytesize.workspace = true
easyerr.workspace = true
paste.workspace = true
strum.workspace = true
tinylog.workspace = true
zerocopy.workspace = true
binrw = "0.14"
