[package]
name = "shimmer_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
shimmer_core = { path = "../shimmer_core" }
shimmer_wgpu_compute = { path = "../shimmer_wgpu_compute" }
strum.workspace = true
tinylog.workspace = true
bytesize.workspace = true

clap = { version = "4.5", features = ["derive"] }
colorous = { version = "1.0", default-features = false }
crossbeam = "0.8"
dhat = { version = "0.3", optional = true }
eframe = { version = "0.30", default-features = false, features = [
    "wayland",
    "wgpu",
    "default_fonts",
] }
egui_dock = "0.15"
egui_table = "0.2"
parking_lot = "0.12"
si-scale = "0.2"

[features]
dhat-heap = ["dep:dhat"]
