[package]
name = "shimmer_wgpu_compute"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[build-dependencies]
wgsl_composer = { git = "https://github.com/vxpm/wgsl-composer.git" }

[dependencies]
shimmer_core = { path = "../shimmer_core" }
bitos.workspace = true
bytesize.workspace = true
easyerr.workspace = true
oneshot.workspace = true
tinylog.workspace = true
wgpu.workspace = true
zerocopy.workspace = true

bitvec = { version = "1", default-features = false }
